Fix Dark Mode Inline Styles

--- a/playbook/app/pb_kits/playbook/pb_date_picker/sass_partials/_inline_styles.scss
+++ b/playbook/app/pb_kits/playbook/pb_date_picker/sass_partials/_inline_styles.scss
@@ -82,7 +82,8 @@
       }
       #date-picker-inline-angle-down {
         svg {
-          display: none;
+          display: inline-block;
+          color: $text_dk_default;
         }
       }
     }
